@@ -1,6 +1,6 @@
 Package: stabledist
 Version: 0.6-0
-Date: 2011-03-11
+Date: 2011-03-12
 Title: Stable Distribution Functions
 Author: Diethelm Wuertz, Martin Maechler and Rmetrics core team members.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
